# ground_vehicles_ws

./: .clang-format  .gitignore  LICENSE  README.md
src/ground_architect_node/: CMakeLists.txt  package.xml
src/ground_architect_node/action/: ExecuteMission.action
src/ground_architect_node/config/: ground_node.params.yaml
src/ground_architect_node/include/ground_architect_node/: ground_node.hpp  state_machine.hpp
src/ground_architect_node/include/ground_architect_node/algorithm/: controller.hpp
src/ground_architect_node/src/algorithm/: controller.cpp
src/ground_architect_node/src/middleware/: ground_node.cpp  main.cpp
src/ground_architect_node/tests/: test_algorithm.cpp  test_params.cpp  test_pubsub.cpp  test_services_actions.cpp  test_state_machine.cpp
