<?xml version="1.0"?>
<package format="3">
  <name>ground_architect_node</name>
  <version>0.1.0</version>
  <description>Lifecycle node with internal FSM, params, pub/sub, services, and action.</description>

  <maintainer email="hamedsamie@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 client libs -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages/interfaces -->
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_srvs</depend>

  <!-- Interface generation for action -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- For rosidl_generate_interfaces DEPENDENCIES builtin_interfaces -->
  <depend>builtin_interfaces</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_generate_default_interfaces/>
    <depend>rosidl_default_runtime</depend>
  </export>
</package>
